<resources>
    <string name="app_name">MovieFlix</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_confirmation">Confirme sua senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Criar uma nova conta</string>
    <string name="action_register_confirmation">Finalizar registro!</string>
    <string name="welcome">"Bem vinde!"</string>
    <string name="invalid_username">Não é um usuário válido</string>
    <string name="invalid_password">Senha deve conter mais de 5 caracteres</string>
    <string name="login_failed">"Login falhou"</string>
    <string name="poster_do_filme">Poster do Filme</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="pulpFiction">Pulp Fiction</string>
    <string name="pulpFiction_sinopse">Assassino que trabalha para a máfia se apaixona pela esposa de seu chefe quando é convidado a acompanhá-la, um boxeador descumpre sua promessa de perder uma luta e um casal tenta um assalto que rapidamente sai do controle.</string>
    <string name="django">DJango</string>
    <string name="django_sinopse">No sul dos Estados Unidos, o ex-escravo Django faz uma aliança inesperada com o caçador de recompensas Schultz para caçar os criminosos mais procurados do país e resgatar sua esposa de um fazendeiro que força seus escravos a participar de competições mortais.</string>
    <string name="resevoirDogs">Cães de Aluguel</string>
    <string name="resevoirDogs_sinopse">Criminoso reúne seis bandidos para grande roubo de diamantes. Algo sai errado e um deles é ferido durante roubo e os bandidos precisam descobrir quem foi que os traiu, o que gera enorme tensão no grupo e enfraquece a todos.</string>
    <string name="goodFellas">Os Bons Companheiros</string>
    <string name="goodFellas_sinopse">Um jovem cresce na máfia e trabalha arduamente para crescer entre seus companheiros. Ele gosta da vida de dinheiro e luxo, mas não liga para o horror que provoca. Infelizmente, a dependência de drogas e alguns erros finalmente destroem sua escalada até o topo. Baseado no livro Wiseguy por Nicholas Pileggi.</string>
    <string name="taxiDriver">Taxi Driver</string>
    <string name="taxiDriver_sinopse">O motorista de táxi de Nova York Travis Bickle, veterano da Guerra do Vietnã, reflete constantemente sobre a corrupção da vida ao seu redor e sente-se cada vez mais perturbado com a própria solidão e alienação. Apesar de não conseguir fazer contato emocional com ninguém e viver uma vida questionável em busca de diversão, ele se torna obcecado em ajudar uma prostituta de 12 anos que entra em seu táxi para fugir de um cafetão.</string>
    <string name="wolfWallstreet">O Lobo de Wall Street</string>
    <string name="wolfWallstreet_sinopse">Jordan Belfort é um ambicioso corretor da bolsa de valores que cria um verdadeiro império, enriquecendo de forma rápida, porém ilegal. Ele e seus amigos mergulham em um mundo de excessos, mas seus métodos ilícitos despertam a atenção da polícia."</string>
    <string name="tarantino">Quentin Tarantino</string>
    <string name="tarantino_info">Quentin Jerome Tarantino é um realizador, argumentista, produtor, ator, diretor de fotografia e crítico de cinema americano. É vencedor de dois Oscars de Melhor Roteiro Original e foi eleito o 19° maior diretor de cinema dos últimos 25 anos segundo o levantamento da Quartz através do Metacritic.</string>
    <string name="scorsese">Martin Scorsese</string>
    <string name="scorsese_info">Martin Scorsese (Queens, Nova Iorque, 17 de novembro de 1942) é um cineasta, produtor de cinema, roteirista e ator norte-americano vencedor do Oscar de melhor diretor por Os Infiltrados. Em 2002, foi eleito o nono maior diretor de cinema de todos os tempos em uma pesquisa realizada pelo British Film Institute e a revista Sight &amp; Sound</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="switch_save">Salvar login e senha</string>
</resources>